appId: com.example.example
tags:
  - passing
---
- launchApp:
    appId: com.example.example
    clearState: true
    clearKeychain: true
    stopApp: true
    permissions:
      all: allow
- assertVisible: 'Form Test'

- stopApp
- launchApp
- assertVisible: 'Form Test'

# clearState
- tapOn: "Input/Keyboard"
- tapOn: "Test Input Field"
- inputText: "potato"
- tapOn: "Save"

- launchApp
- tapOn: "Input/Keyboard"
- assertVisible: "potato"

- launchApp:
    clearState: true
- tapOn: "Input/Keyboard"
- assertNotVisible: "potato"