appId: com.example.example
env:
  airplaneOn: enabled
  airplaneOff: disabled
tags:
  - passing
  - android
---
- launchApp # For idempotence of sections

- tapOn: 'Connectivity Test'

- setAirplaneMode: enabled
- assertVisible: 'Offline'

- setAirplaneMode: disabled
- assertVisible: 'Online'

- setAirplaneMode: ${airplaneOn}
- assertVisible: 'Offline'

- setAirplaneMode: ${airplaneOff}
- assertVisible: 'Online'

