appId: com.example.example
name: Issue 565 (swipe)
---
- launchApp:
    clearState: false
- tapOn: Gesture Tester
- waitForAnimationToEnd

- swipe:
    start: 50%, 15%
    end: 15%, 50%
    duration: 1000
- swipe:  
    start: 15%, 50%
    end: 85%, 85%
    duration: 1000
- swipe:  
    start: 85%, 85%
    end: 85%, 50%
    duration: 1000
- tapOn:
    point: 85%, 50%
- assertVisible: All green
