appId: com.example.example
---
- launchApp # For idempotence of sections

- tapOn: 'Input Test'
- tapOn:
    id: 'textInput'
- inputRandomEmail
- assertVisible: '.+@.+'