appId: com.example.example
---
- launchApp # For idempotence of sections

- tapOn: 'Input Test'
- tapOn:
    id: 'textInput'
- inputRandomPersonName
- assertVisible: 
    text: '[A-Z][a-z]+ [A-Z][a-z]+'
    id: 'textInput'