appId: com.example.example
---
- launchApp

- retry:
    maxRetries: 3
    commands:
      - tapOn:
          id: 'fabAddIcon'
          retryTapIfNoChange: false
      - waitForAnimationToEnd
      - assertVisible: '2'
- assertVisible: 'Flutter Demo Home Page'
