# This flow is to ensure that commands with optional flag are not failing the flow.
appId: com.example.example
tags:
    - passing
---
- installApp: "../../apps/demo_app.apk"
- launchApp:
    clearState: true
- assertVisible:
    id: non-existent-id
    optional: true
- assertNotVisible:
    text: Flutter Demo Home Page
    optional: true
- assertTrue:
    condition: ${ false }
    label: Warn
    optional: true
- tapOn:
    id: non-existent-id
    optional: true
- doubleTapOn:
    id: non-existent-id
    optional: true
- longPressOn:
    id: non-existent-id
    optional: true
- copyTextFrom:
    id: non-existent-id
    optional: true
- launchApp:
    appId: non.existent.app.id
    optional: true
- tapOn:
    id: non-existent-id
    repeat: 3
    delay: 500
    optional: true
# - swipe:
#     optional: true
- scrollUntilVisible:
    element:
      id: non-existent-id
      optional: true
    optional: true
